...
                        viewModel.userName.value = newValue
                    }
                    viewModel.validateUserName()
                },
                shape = RoundedCornerShape(12.dp),
                isError = viewModel.isUserNameValid.value,
                placeholder = { Text(text = "User Name", color = MaterialTheme.colorScheme.onPrimary) },
                colors = TextFieldDefaults.outlinedTextFieldColors(
                    focusedBorderColor = MaterialTheme.colorScheme.onPrimary,
                    unfocusedBorderColor = MaterialTheme.colorScheme.onPrimary.copy(alpha = 0.5f),
                    backgroundColor = MaterialTheme.colorScheme.surface,
                    textColor = MaterialTheme.colorScheme.onPrimary,
                    cursorColor = MaterialTheme.colorScheme.onPrimary
...
                    .focusRequester(usernameFocusRequester)
                    .testTag("User Name")
            )
            Text(
                modifier = Modifier
                    .padding(start = 8.dp)
                    .testTag("username_error"),
                text = viewModel.userNameErrMsg.value,
                fontSize = 10.sp,
                color = Color.Red
            )
            Spacer(modifier = Modifier.height(8.dp))
            OutlinedTextField(
...
                            true // Consume the event
                        } else {
                            false // Don't consume the event
                        }
                    }
                    .focusRequester(emailFocusRequester)
                    .testTag("email")
            )
            Text(
                modifier = Modifier.padding(start = 8.dp),
                text = viewModel.emailErrMsg.value,
                fontSize = 10.sp,
                color = Color.Red
...
                            true
                        } else {
                            false
                        }
                    }
                    .focusRequester(passwordFocusRequester)
                    .testTag("password")
            )
            Text(
                modifier = Modifier
                    .padding(start = 8.dp)
                    .testTag("password_error"),
                text = viewModel.passwordErrMsg.value,
                fontSize = 10.sp,
                color = Color.Red
            )
            Spacer(modifier = Modifier.height(8.dp))

...
                        )
                    }
                },
                modifier = Modifier
                    .fillMaxWidth(0.8f)
                    .focusRequester(confirmPasswordFocusRequester)
                    .testTag("confirm password")
            )
            Text(
                modifier = Modifier
                    .padding(start = 8.dp)
                    .testTag("confirm password_error"),
                text = viewModel.confPasswordErrMsg.value,
                fontSize = 10.sp,
                color = Color.Red
            )
            Spacer(modifier = Modifier.height(12.dp))
            Button(
                onClick = {
                    viewModel.SignUp()
                },
                modifier = Modifier
                    .height(40.dp)
                    .width(150.dp)
                    .testTag("confirm"),
                colors = ButtonDefaults.buttonColors(
                    backgroundColor = MaterialTheme.colorScheme.onPrimary,
                    disabledBackgroundColor = MaterialTheme.colorScheme.onPrimary.copy(alpha = 0.5f)
                ),
                enabled = viewModel.isEnabledRegisterButton.value
            ) {
...
